Só continuei a musica

--- a/mano.html
+++ b/mano.html
@@ -6,5 +6,7 @@
         <h2>Mas eu sei que alguma coisa aconteceu
             
         </h2>
+        <h3>Tá tudo assim, tão diferente</h3>
+        
     </body>
 </html>
